--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Microservice for handle search crud",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sunny Rajbhar",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
